# grokking-llm-system-design-in-enterprise

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  case_study_request.yml  feature_request.yml
.github/workflows/: ci.yml  deploy-gh-pages.yml
docs/: about.md  index.md  roadmap.md
docs/agent-systems/: foundations.md  index.md  internal-coding-agent.md  multi-agent-orchestration.md
docs/case-studies/: _index.md  index.md  microsoft-ask-learn.md
docs/contributing/: chapter-template.md  review-process.md  style-guide.md
docs/evaluation/: eval-flywheel.md  foundations.md  index.md
docs/foundations/: agent-foundations.md  control-surfaces.md  index.md  retrieval-foundations.md  system-boundaries.md
docs/inference-platform-infra/: index.md  online-inference-service.md
docs/interview/: enterprise-chatgpt.md  rag-system-design.md
docs/introduction/: about.md  index.md  roadmap.md
docs/knowledge-retrieval-systems/: domain-specific-q-and-a-bot.md  index.md  internal-chatgpt.md  microsoft-ask-learn.md  notebooklm.md  rag-system.md
docs/llm-infrastructure/: index.md
docs/llmops-production/: ai-infra.md  enterprise-assistant-design-prompt.md  enterprise-llm-apps.md  index.md  llm-gateway.md
docs/model-lifecycle/: index.md  llm-fine-tuning-system.md
docs/patterns/: eval-flywheel.md  hybrid-retrieval.md  llm-gateway.md  multi-agent-orchestration.md  (+1 more)
scripts/: check_links.py
(+25 files in other folders)
