[project]
name = "grokking-llm-system-design-in-enterprise"
version = "0.1.0"
description = "Open case studies on enterprise LLMs, RAG, agents, AI infra, and LLMOps."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocs-mermaid2-plugin>=1.1",
  "pymdown-extensions>=10.7",
]

[dependency-groups]
dev = []
